--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
 
 
           </section>
-          <section id = "resultShow"></section>
+          <section id = "resultShow">
+
+
+            
+          </section>
+          
           <canvas id="resultChart" ></canvas>
         </main>
 
